[refactor] Changed the collector.toList() to Stream.toList()